memo/memo-with-references/tests/1-not-fn.stderr
error: expected fn item
 --> tests/1-not-fn.rs:4:1
  |
4 | enum Huh {}
  | ^^^^^^^^^^^
