memo/memo-with-references/tests/1-not-fn.rs
use memo_with_references::memo;

#[memo]
enum Huh {}

fn main() {}
